fixed frostys alignment issue

--- a/Restaurant site/restaurantStyles.css
+++ b/Restaurant site/restaurantStyles.css
@@ -16,6 +16,19 @@ display: block;
 margin: auto;
 width: 30%;}
 
+label{
+    display: inline-block;
+    float: left;
+    clear: left;
+    width: 400px;
+    text-align: right;
+}
+
+input {
+  display: inline-block;
+  float: left;
+}
+
 
 
 
